# rocketry

./: .gitignore  Cargo.toml  build-api  build-api.bat  build-sil  build-sil.bat  count_loc.py  do-clippy  pressfed-engine-sim  pressfed-igniter-sim  requirements.txt  run-sil  run-sil.bat
big-brother/: Cargo.toml
big-brother/src/: big_brother.rs  dedupe.rs  forwarding.rs  interface.rs  lib.rs  network_map.rs  serdes.rs
big-brother/src/interface/: bridge_interface.rs  mock_interface.rs  mock_topology.rs  select_interface.rs  smoltcp_interface.rs  std_interface.rs
big-brother/tests/: test_bb.rs  test_mock_networking.rs
bootloader/ethboot-program/: Cargo.toml
bootloader/ethboot-program/src/: main.rs
bootloader/ethboot-shared/: Cargo.toml
bootloader/ethboot-shared/src/: lib.rs
bootloader/stm32f4xx-ethboot/: Cargo.toml  bloat  build.bat  defmt-run.bat  flash.bat  memory.x
bootloader/stm32f4xx-ethboot/.cargo/: config.toml
bootloader/stm32f4xx-ethboot/src/: main.rs
comms-manager/: Cargo.toml
design-scripts/: README.md  cea_from_data.py  engine_cea.py  gear_pump.py  igniter_cea.py  orifice.py  props.py  pump_equivalence.py
ecu-v0_1-kicad/: controller-kicad.kicad_pro  controller-kicad.kicad_sch  custom_symbols.kicad_sym
ecu/targets/stm32f407/: Cargo.toml  build  ecu-stm32f407.hex
ecu/targets/stm32f407/src/: comms.rs  daq.rs  ecu.rs  ecu_driver.rs  main.rs  periphals.rs  peripherals.rs
ecu/targets/stm32f407/src/ecu/: fuel_tank_fsm.rs  igniter_fsm.rs
engine-controller/ecu-rs/: Cargo.toml
engine-controller/ecu-rs/src/: alert_watchdog.rs  debug_info.rs  ecu.rs  engine_fsm.rs  igniter_fsm.rs  lib.rs  pump_fsm.rs  state_vector.rs  tank_fsm.rs
engine-controller/ecu-rs/src/engine_fsm/: engine_shutdown.rs  engine_startup.rs  firing.rs  idle.rs  igniter_startup.rs  pump_startup.rs
engine-controller/ecu-rs/src/igniter_fsm/: firing.rs  idle.rs  shutdown.rs  startup.rs
engine-controller/ecu-rs/src/pump_fsm/: idle.rs  pumping.rs
engine-controller/ecu-rs/src/tank_fsm/: depressurized.rs  filling.rs  idle.rs  pressurized.rs  venting.rs
engine-controller/ecu-stm32f407/: Cargo.toml  build  eth-flash  flash  memory.x
engine-controller/ecu-stm32f407/src/: comms.rs  ecu.rs  ecu_driver.rs  main.rs  peripherals.rs
engine-controller/ecu-stm32f407/src/ecu/: igniter_fsm.rs
fcu/flight-controller/: Cargo.toml
fcu/flight-controller/src/: dev_stats.rs  kalman.rs  lib.rs  state_vector.rs  vehicle_fsm.rs
fcu/flight-controller/src/state_vector/: kalman.rs  orientation.rs  position.rs
fcu/flight-controller/src/vehicle_fsm/: ascent.rs  calibrating.rs  descent.rs  idle.rs  landed.rs  template.rs  zeroing.rs
fcu/targets/fcu-stm32f407/: Cargo.toml  binary_size.py  build  defmt-run
fcu/targets/fcu-stm32f407/.cargo/: config.toml
fcu/targets/fcu-stm32f407/src/: comms.rs  drivers.rs  fcu_driver.rs  logging.rs  main.rs  sensors.rs
fcu/targets/fcu-stm32f407/src/drivers/: bmi088.rs  bmm150.rs  w25x05.rs
flight-controller/fcu-stm32f407/: Cargo.toml  app.map  boot-stm32f407vgt6.json  build  defmt-run  eth-flash  flash  memory.x  program  pull_flash.py
flight-controller/fcu-stm32f407/.cargo/: config.toml
flight-controller/fcu-stm32f407/src/: comms.rs  drivers.rs  fcu_driver.rs  logging.rs  main.rs  sensors.rs
flight-controller/fcu-stm32f407/src/drivers/: bmi088.rs
flight-controller/flight-controller-rs/: Cargo.toml
flight-controller/flight-controller-rs/src/: alert_watchdog.rs  debug_info.rs  dev_stats.rs  lib.rs  state_vector.rs  test.py  vehicle_fsm.rs
flight-controller/flight-controller-rs/src/state_vector/: kalman.rs  orientation.rs  position.rs
flight-controller/flight-controller-rs/src/vehicle_fsm/: armed.rs  ascent.rs  calibrating.rs  descent.rs  idle.rs  ignition.rs  landed.rs  template.rs
hal/: Cargo.toml  do-clippy
kicad/: CustomSymbols.kicad_sym
mission-ctrl/: go.mod
mission-ctrl/mission-ctrl-api/: Cargo.toml
mission-ctrl/mission-ctrl-api/src/: engine.rs  igniter.rs  lib.rs  pump.rs  tank.rs
mission-ctrl/mission-ctrl-server/: 2024-01-18-17-35-42-sensor-data.txt  2024-01-20-12-19-51-sensor-data.txt  Cargo.toml  Rocket.toml  build-api  hardware.json  ipython_startup.py  plot_data.py
mission-ctrl/mission-ctrl-server/src/: cameras.rs  commands.rs  comms.rs  config.rs  ecu_telemetry.rs  fcu_telemetry.rs  hardware.rs  input.rs  logging.rs  main.rs  observer.rs  recording.rs  telemetry.rs  terminal.rs
mission-ctrl/mission-ctrl-server/src-old/: commands.rs  hardware.rs  main.rs  recording.rs
mission-ctrl/mission-ctrl-server/src/cameras/: connection.rs  webrtc.rs
mission-ctrl/mission-ctrl-server/src/commands/: components.rs  logging.rs  sequence.rs  streamish.rs  tanks.rs
mission-ctrl/mission-ctrl-server/src/comms/: addresses.rs  recv.rs  send.rs
mission-ctrl/mission-ctrl-server/src/telemetry/: ecu_telemetry.rs  ecu_telemetry_example.json  fcu_telemetry.rs
shared/: Cargo.toml
simulation/: build-api  build-sil  build-sil.bat  igniter-sim  pressfed-engine-sim  pressfed-igniter-sim  pump-engine-sim  pump-igniter-sim  replay.py  rt_endrega_config.json  rt_wyvern_config.json  run-sim  server.py  simulation.py  solidmotor-sim  vehicle_components.py
simulation/core/software-in-loop/: Cargo.toml
simulation/core/software-in-loop/src/: driver.rs  dynamics.rs  lib.rs  logging.rs  ser.rs
simulation/software-in-loop/: Cargo.toml
simulation/software-in-loop/src/: driver.rs  dynamics.rs  ecu.rs  fcu.rs  glue.rs  lib.rs  logging.rs  mission_ctrl.rs  network.rs  sensors.rs  ser.rs  simulation_manager.rs
simulation/software-in-loop/src/dynamics/: combustion.rs  engine.rs  fluid.rs  igniter.rs  pipe.rs  pipe_splitter.rs  pump.rs  tank.rs  vehicle.rs
simulation/software-in-loop/src/ecu/: driver.rs  ecu_sil.rs  sensors.rs
simulation/software-in-loop/src/fcu/: driver.rs  sil_fcu.rs
simulation/software-in-loop/src/sensors/: ecu_sensors.rs
streamish/: Cargo.toml  pyproject.toml  rpi0.json  stream.py
streamish/.github/workflows/: CI.yml
streamish/src/: broadcast.rs  config.rs  lib.rs  main.rs  stream.rs  streamish.rs
(+173 files in other folders)
