[workspace]
resolver = "2"

members = [
    "ecu/engine-controller",
    "flight-controller/flight-controller-rs",
    "mission-ctrl/mission-ctrl-server",
    "shared",
    "simulation/core/software-in-loop",
    "streamish",
]

exclude = [
    "ecu/targets/stm32f407",
    "flight-controller/fcu-stm32f407",
]
