[workspace]
resolver = "2"

members = [
    "big-brother",
    "bootloader/ethboot-program",
    "bootloader/ethboot-shared",
    "ecu/engine-controller",
    "flight-controller/flight-controller-rs",
    "mission-ctrl/mission-ctrl-server",
    "shared",
    "simulation/software-in-loop",
    "streamish",
]

exclude = [
    "bootloader/stm32f4xx-ethboot",
    "ecu/targets/stm32f407",
    "flight-controller/fcu-stm32f407",
]
