[workspace]
resolver = "2"

members = [
    "big-brother",
    "bootloader/ethboot-program",
    "bootloader/ethboot-shared",
    "engine-controller/ecu-rs",
    "flight-controller/fcu-rs",
    "mission-ctrl/mission-ctrl-server",
    "shared",
    "simulation/software-in-loop",
    "streamish",
]

exclude = [
    "bootloader/stm32f4xx-ethboot",
    "engine-controller/ecu-stm32f407",
    "flight-controller/fcu-stm32f407",
]
