[package]
name = "streamish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "streamish"
crate-type = ["cdylib"]

[dependencies]
hal = { path = "../hal" }
pyo3 = { version = "0.18.2", features = ["abi3-py38"] }
local-ip-address = "0.5.3"

