[package]
name = "streamish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
sysinfo = "0.29.7"
serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"

[dependencies.big-brother]
path = "../big-brother"
features = ["stdtcp"]
