[package]
name = "ethboot-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethboot-shared = { path = "../ethboot-shared" }
serde = { version = "1.0", default-features = false, features = ["derive"]  }
serde_json = "1.0"
shared = { path = "../../shared" }
rand = "0.8"

[dependencies.big-brother]
path = "../../big-brother"
features = ["stdtcp"]
