[package]
name = "ethboot-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.150", default-features = false, features = ["derive"]  }
postcard = "1.0.2"
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = "0.24"

[dependencies.smoltcp]
version = "0.10"
default-features = false
features = ["medium-ethernet", "socket-udp", "proto-ipv4"]
