[package]
name = "stm32f4xx-ethboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"

[dependencies.stm32f4]
version = "0.15.1"
features = ["rt", "stm32f407"]

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["rt", "defmt", "stm32f407"]

[dependencies.stm32-eth]
version = "0.3.0"
features = ["stm32f407", "smoltcp-phy"]

[dependencies.smoltcp]
version = "0.8.2"
default-features = false
features = ["medium-ethernet", "socket-udp", "proto-ipv4"]

[patch.crates-io]
stm32-eth = { git = "https://github.com/DavidTheFighter/stm32-eth" }

[profile.release]
opt-level = "z"
