[package]
name = "engine-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24", default-features = false, features = ["derive"] }
serde = { version = "1.0.150", default-features = false, features = ["derive"]  }

[dependencies.big-brother]
path = "../../big-brother"

[dependencies.shared]
path = "../../shared"
