[package]
name = "stm32f407"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = { version = "1.1.4", features = ["test-critical-section"] }
systick-monotonic = "1.0.1"
strum = { version = "0.24", default-features = false, features = ["derive"] }
rand_core = "0.6.4"

[dependencies.shared]
path = "../../shared"

[dependencies.big-brother]
path = "../../big-brother"
default-features = false
features = ["smoltcp", "no_std"]

[dependencies.ecu-rs]
path = "../ecu-rs"

[dependencies.stm32f4]
version = "0.15.1"
features = ["rt", "stm32f407"]

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["rt", "stm32f407"]

[dependencies.stm32-eth]
version = "0.5.2"
features = ["stm32f407", "smoltcp-phy"]
