[package]
name = "fcu-stm32f407"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = { version = "1.1.4", features = ["test-critical-section"] }
systick-monotonic = "1.0.1"
strum = { version = "0.24", default-features = false, features = ["derive"] }
mint = "0.5.9"
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
ms5611-rs = { git = "https://github.com/DavidTheFighter/ms5611-rs" }
bmi088-rs = { git = "https://github.com/DavidTheFighter/bmi088-rs" }

[dependencies.shared]
path = "../../shared"

[dependencies.big-brother]
path = "../../big-brother"

[dependencies.flight-controller-rs]
path = "../flight-controller-rs"

[dependencies.stm32f4]
version = "0.15.1"
features = ["rt", "stm32f407"]

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["rt", "defmt", "stm32f407"]

[dependencies.stm32-eth]
version = "0.5.2"
features = ["stm32f407", "smoltcp-phy"]

[dependencies.shared-bus]
git = "https://github.com/Rahix/shared-bus"
rev = "b78409b326fcdfb2f26d6a721737c6842615d630"
default-features = false
features = ["cortex-m", "eh-alpha"]

[dependencies.smoltcp]
version = "0.10"
default-features = false
features = ["medium-ethernet", "socket-udp", "proto-ipv4", "defmt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-