[package]
name = "mission-ctrl-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "mission_ctrl_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../shared" }
pyo3 = { version = "0.18.2", features = ["abi3-py38"] }
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = "0.24"
serde = "1.0"
serde_json = "1.0"
tungstenite = "0.23.0"
