[package]
name = "mission-ctrl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
ws = { package = "rocket_ws", version = "0.1.0" }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
rand = "0.8"
dashmap = "5.4.0"
webrtc = "0.8"
tokio = { version = "1.15", features = ["full"] }
base64 = "0.21.2"

[dependencies.shared]
path = "../../shared"

[dependencies.big-brother]
path = "../../big-brother"
