[package]
name = "software-in-loop"
version = "0.1.0"
edition = "2021"

[lib]
name = "software_in_loop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../shared" }
pyo3 = { version = "0.18.2", features = ["abi3-py38"] }
static-alloc = "0.2.4"
nalgebra = { version = "0.32", default-features = false, features = ["mint", "libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
libm = "0.2"
mint = "0.5"
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = "0.24"
serde = "1.0"
serde_json = "1.0"

[dependencies.flight-controller-rs]
path = "../../flight-controller/flight-controller-rs/"
features = ["sil"]

[dependencies.big-brother]
path = "../../big-brother"
features = ["stdtcp"]
