[package]
name = "software-in-loop"
version = "0.1.0"
edition = "2021"

[lib]
name = "software_in_loop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../shared" }
pyo3 = { version = "0.18.2", features = ["abi3-py38"] }
nalgebra = { version = "0.32", default-features = false, features = ["mint", "libm"] }
libm = "0.2"
mint = "0.5"
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = "0.24"
serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dependencies.ecu-rs]
path = "../../engine-controller/ecu-rs/"
features = ["sil"]

[dependencies.fcu-rs]
path = "../../flight-controller/fcu-rs/"
features = ["sil"]

[dependencies.big-brother]
path = "../../big-brother"

[dependencies.mission-ctrl-api]
path = "../../mission-ctrl/mission-ctrl-api"
