[package]
name = "fcu-stm32f407"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = { version = "1.1.4", features = ["test-critical-section"] }
systick-monotonic = "1.0.1"
strum = { version = "0.24", default-features = false, features = ["derive"] }
mint = "0.5.9"
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3.1", feautres = ["print-defmt"] }

[dependencies.hal]
path = "../../../hal"

[dependencies.flight-controller]
path = "../../flight-controller"

[dependencies.stm32f4]
version = "0.15.1"
features = ["rt", "stm32f407"]

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["rt", "defmt", "stm32f407"]

[dependencies.stm32-eth]
version = "0.3.0"
features = ["stm32f407", "smoltcp-phy"]

[dependencies.smoltcp]
version = "0.8.2"
default-features = false
features = ["medium-ethernet", "socket-udp", "proto-ipv4", "defmt"]

[patch.crates-io]
stm32-eth = { git = "https://github.com/DavidTheFighter/stm32-eth" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-